--- a/css/CoolWater.css
+++ b/css/CoolWater.css
@@ -422,7 +422,17 @@ input.button {
 	visibility:hidden;
 	clear:both;
 	height:0;
-	content: " ";
+	content: " ";}
+
+
+   .report{
+
+    color: #000000;
+       font-size: 30px;
+       text-align: center;
+
+
 }
+
 
 
